--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -51,7 +51,7 @@
 
       <!-- using bootstrap strat -->
       <!-- <div class="labelstyle">
-          <!-- <span *ngIf="is_error" style="color:red;" class="help-block validation" autofocus>{{ errInfo.non_field_errors }} </span> 
+          <!- <span *ngIf="is_error" style="color:red;" class="help-block validation" autofocus>{{ errInfo.non_field_errors }} </span> 
           <br>
           <label for="UserName">User name</label>
           <input type="text" class="form-control" placeholder="Enter user name" aria-label="username" aria-describedby="basic-addon1"
@@ -63,7 +63,7 @@
           <label for="email">Email address</label>
           <input type="text" class="form-control" placeholder="Enter email address" aria-label="email" aria-describedby="basic-addon1"
             #email/>
-          <!-- <span *ngIf="is_error" style="color:red;" class="help-block validation" autofocus>{{ errInfo.email }} </span> 
+          <!- <span *ngIf="is_error" style="color:red;" class="help-block validation" autofocus>{{ errInfo.email }} </span> 
         </div>
         <div class="labelstyle">
           <br>
@@ -76,7 +76,7 @@
             <input class="btn btn-primary add" type="submit" title="save the details" (click)='sendUserCredentials(Uname.value, email.value, pass.value);'
           />
           </div>
-        <!-- using bootstrap end -->
+        <!- using bootstrap end -->
 
       <br>
       <br>
