--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -50,7 +50,7 @@
         <label for="UserName">User Name</label>
         <input type="text" class="form-control" placeholder="Enter user name" aria-label="username" aria-describedby="basic-addon1"
           #Uname/>
-        <!-- <span *ngIf="is_error" style="color:red;" class="help-block validation" autofocus>{{ errInfo.password }} </span> 
+        <!- <span *ngIf="is_error" style="color:red;" class="help-block validation" autofocus>{{ errInfo.password }} </span> 
       </div>
 
       <div class="labelstyle">
